--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ pyext==0.5
 mosestokenizer==1.0.0
 huggingface_hub>=0.11.1
 fsspec>=2023.12.2
+vllm>=0.7.2
 sentence-transformers>=4.0.0
 bert-score>=0.3.11
+hqq>=0.2.5
+gemlite>=0.4.4
