Adding comments and TODO for measuring nb. tokens by time or by nb. of output sequences

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ __pycache__
 
 # SLURM output files
 slurm/run_all_experiments.sh
-slurm/experiment_summary.md
+slurm/run*.sh
+slurm/*.md
 slurm/*.out
 slurm/job*
 *.out
