--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-transformers==4.51
+transformers==4.51.1
 accelerate>=0.13.2
 datasets==3.2.0
 evaluate>=0.3.0
@@ -8,7 +8,7 @@ huggingface_hub>=0.11.1
 fsspec>=2023.12.2
 vllm==0.8.4
 sentence-transformers==4.1.0
-bert-score==0.3.11
+bert-score>=0.3.11
 hqq==0.2.7
 gemlite==0.4.7
-nvidia-ml-py==12.570.0
+nvidia-ml-py>=12.570.0
